--- a/studio/package.json
+++ b/studio/package.json
@@ -1,6 +1,6 @@
 {
   "private": false,
-  "name": "example-company-website-gatsby-sanity-combo-studio",
+  "name": "studio",
   "version": "1.0.0",
   "author": "Sanity <hello@sanity.io>",
   "engines": {
@@ -12,33 +12,40 @@
     "graphql-deploy": "sanity graphql deploy --playground",
     "sanity-deploy": "sanity deploy",
     "lint": "eslint .",
-    "start": "sanity start",
+    "start": "sanity start --port 8001",
     "build": "sanity build",
     "now-build": "npm run build",
     "now-dev": "npm run build",
     "test": "sanity check"
   },
   "dependencies": {
-    "@sanity/base": "^0.147.3",
-    "@sanity/cli": "^0.146.0",
-    "@sanity/components": "^0.147.3",
-    "@sanity/core": "^0.147.3",
-    "@sanity/default-layout": "^0.147.4",
-    "@sanity/default-login": "^0.147.0",
-    "@sanity/desk-tool": "^0.147.3",
+    "@sanity/base": "^1.149.3",
+    "@sanity/cli": "^1.149.2",
+    "@sanity/color-input": "^1.149.0",
+    "@sanity/components": "^1.149.3",
+    "@sanity/core": "^1.149.2",
+    "@sanity/dashboard": "^1.149.3",
+    "@sanity/default-layout": "^1.149.3",
+    "@sanity/default-login": "^1.149.0",
+    "@sanity/desk-tool": "^1.149.3",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-icons": "^3.8.0"
+    "react-icons": "^3.9.0",
+    "sanity-plugin-dark-mode": "^0.0.32",
+    "sanity-plugin-dashboard-widget-document-chart": "^0.0.6",
+    "sanity-plugin-dashboard-widget-netlify": "^1.0.1",
+    "sanity-plugin-highcharts-editor": "^1.0.2",
+    "sanity-plugin-media": "^0.2.10"
   },
   "devDependencies": {
-    "eslint": "^6.7.2",
+    "eslint": "^6.8.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-config-standard-react": "^9.2.0",
-    "eslint-plugin-import": "^2.19.1",
-    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-react": "^7.18.3",
     "eslint-plugin-standard": "^4.0.1",
     "prettier-eslint-cli": "^5.0.0"
   }
